# cpp_sdk

./: CMakeLists.txt  README.md  sample.cpp
include/: Auth.h  Imageapi.h
src/: Auth.cpp  CMakeLists.txt  Imageapi.cpp
